<resources>
    <string name="app_name">SITDoctors</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_contacts">Contacts</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Email">Email</string> <!-- Added to match the layout reference -->
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="doctor_name">Doctor Name</string>
    <!-- Added missing string resources -->
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="chat_with">Chat with %1$s</string>
    <string name="send">Send</string>
    <string name="type_message">Type a message</string>
    <string name="empty_message_warning">Message cannot be empty</string>
    <string name="chat_with_doctor">Chat with Doctor %1$s</string>

</resources>
