<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sitdoctors.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.sitdoctors.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.example.sitdoctors.ui.chatbot.ChatbotFragment"
        android:label="Chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.sitdoctors.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_contacts_doctors"
        android:name="com.example.sitdoctors.ui.contacts.DoctorContactFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_doctor_contact" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.sitdoctors.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <action
        android:id="@+id/action_notificationFragment_to_profileFragment"
        app:destination="@id/profileFragment" />


</navigation>