<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/doctorNameTextView"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:paddingBottom="10dp"
        android:text="@string/chat_with_doctor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:background="#D1E7F3"
        android:overScrollMode="never" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:padding="12dp"
            android:hint="@string/type_message"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:inputType="textShortMessage"
            android:autofillHints="username"
            android:background="@android:drawable/edit_text"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:padding="12dp"
            android:minWidth="80dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>
